# cleep-official

./: .gitignore  Cargo.toml
diagrams/: architecture.excalidraw
gui/src/: audio.rs  home.rs  main.rs
server/: Cargo.toml  commands.txt  requests.txt
server/db/: tables.sql
server/src/: main.rs
server/tests/: client.rs  quick_dev.rs
src/: settings.rs
