[package]
name = "cleep-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version ="0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
jwt = "0.16.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
oauth2 = "4.4.2"
reqwest = "0.11.22"
webbrowser = "0.8.12"
serde_urlencoded = "0.7.1"
